[gd_scene load_steps=9 format=3 uid="uid://dn5qx1mv643mq"]

[ext_resource type="Script" uid="uid://cbrbbrhqvd8i5" path="res://addons/Comedot/ComponentsDock.gd" id="1_otxly"]
[ext_resource type="Texture2D" uid="uid://cej643k1obcve" path="res://Assets/Logos/ComedotLogo.png" id="2_7r6gx"]
[ext_resource type="Texture2D" uid="uid://xtlcc1rdpsyc" path="res://Assets/Icons/Entity.svg" id="3_fn551"]
[ext_resource type="Script" uid="uid://cybqq1hjwci3e" path="res://addons/Comedot/KeywordLineEdit.gd" id="5_6vyr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7r6gx"]

[sub_resource type="InputEventKey" id="InputEventKey_x0w7g"]
device = -1
command_or_control_autoremap = true
shift_pressed = true
keycode = 69

[sub_resource type="Shortcut" id="Shortcut_3crsp"]
events = [SubResource("InputEventKey_x0w7g")]

[sub_resource type="GDScript" id="GDScript_3crsp"]
script/source = "@tool
extends ScrollContainer

@onready var keyword_input: LineEdit = $VBoxContainer/KeywordInput
"

[node name="Comedot" type="Panel"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_otxly")
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderMarginContainer" type="MarginContainer" parent="GridContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HeaderContainer" type="HBoxContainer" parent="GridContainer/HeaderMarginContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="GridContainer/HeaderMarginContainer/HeaderContainer"]
modulate = Color(1, 1, 1, 0.5)
texture_filter = 2
clip_contents = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.5
texture = ExtResource("2_7r6gx")
expand_mode = 3
stretch_mode = 4

[node name="Spacer" type="VSeparator" parent="GridContainer/HeaderMarginContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_7r6gx")

[node name="ButtonsContainer" type="VBoxContainer" parent="GridContainer/HeaderMarginContainer/HeaderContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="AddEntityMenuButton" type="MenuButton" parent="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer"]
unique_name_in_owner = true
modulate = Color(0.486275, 0.988235, 0, 1)
layout_mode = 2
tooltip_text = "Add a new Entity of the chosen base type to the currently selected node in the Scene Editor."
shortcut = SubResource("Shortcut_3crsp")
text = "Add Entity"
icon = ExtResource("3_fn551")
flat = false
alignment = 2
icon_alignment = 2
expand_icon = true
item_count = 4
popup/item_0/text = "Node2D"
popup/item_0/id = 0
popup/item_1/text = "Area2D"
popup/item_1/id = 1
popup/item_2/text = "CharacterBody2D"
popup/item_2/id = 2
popup/item_3/text = "Sprite2D"
popup/item_3/id = 3

[node name="EditComponentButton" type="Button" parent="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Open the original source scene of the Component currently selected in this Dock."
disabled = true
text = "Edit Component"
alignment = 2

[node name="RefreshButton" type="Button" parent="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer"]
layout_mode = 2
tooltip_text = "Scan the `\\Components\\` folder's subfolders for all Components."
text = "Rescan Folders"
alignment = 2

[node name="DebugReloadButton" type="Button" parent="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reload the Comedot plugin and refresh the Comedock."
text = "Reload Plugin"
alignment = 2

[node name="EditableChildrenCheckBox" type="CheckBox" parent="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Expose the sub-nodes of new Entities & Components?"
button_pressed = true
text = "Editable Children"
alignment = 2

[node name="TextMarginContainer" type="MarginContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/TextMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="GridContainer/TextMarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Components"

[node name="HelpLabel" type="Label" parent="GridContainer/TextMarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_type_variation = &"TooltipLabel"
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
text = "Select an Entity node in the scene to add Components."
text_overrun_behavior = 3

[node name="HelpLabel2" type="Label" parent="GridContainer/TextMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"TooltipLabel"
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
text = "For more commands, see the Project â†’ Tools menu."
text_overrun_behavior = 3

[node name="TreeScrollContainer" type="ScrollContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
follow_focus = true
script = SubResource("GDScript_3crsp")

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/TreeScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeywordLineEdit" type="LineEdit" parent="GridContainer/TreeScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "filter"
script = ExtResource("5_6vyr6")

[node name="ComponentsTree" type="Tree" parent="GridContainer/TreeScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
columns = 2
hide_root = true
select_mode = 1

[node name="NewComponentDialog" type="ConfirmationDialog" parent="."]
title = "New Component"
initial_position = 2
size = Vector2i(250, 200)
ok_button_text = "Create"
dialog_text = "Choose a name for a new Component as a pair of \".tscn\" and \".gd\" files."
dialog_autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="NewComponentDialog"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -192.0
offset_right = -8.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="HSeparator" parent="NewComponentDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_7r6gx")

[node name="NewComponentFolderLabel" type="Label" parent="NewComponentDialog/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Folder: "

[node name="NewComponentNameTextBox" type="LineEdit" parent="NewComponentDialog/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "NewComponent"

[connection signal="pressed" from="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer/AddEntityMenuButton" to="." method="onAddEntityButton_pressed"]
[connection signal="pressed" from="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer/EditComponentButton" to="." method="onEditComponentButton_pressed"]
[connection signal="pressed" from="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer/RefreshButton" to="." method="onRefreshButton_pressed"]
[connection signal="pressed" from="GridContainer/HeaderMarginContainer/HeaderContainer/ButtonsContainer/DebugReloadButton" to="." method="onDebugReloadButton_pressed"]
[connection signal="text_changed" from="GridContainer/TreeScrollContainer/VBoxContainer/KeywordLineEdit" to="GridContainer/TreeScrollContainer/VBoxContainer/KeywordLineEdit" method="onTextChanged"]
[connection signal="button_clicked" from="GridContainer/TreeScrollContainer/VBoxContainer/ComponentsTree" to="." method="onComponentsTree_buttonClicked"]
[connection signal="item_activated" from="GridContainer/TreeScrollContainer/VBoxContainer/ComponentsTree" to="." method="onComponentsTree_itemActivated"]
[connection signal="item_edited" from="GridContainer/TreeScrollContainer/VBoxContainer/ComponentsTree" to="." method="onComponentsTree_itemEdited"]
[connection signal="item_selected" from="GridContainer/TreeScrollContainer/VBoxContainer/ComponentsTree" to="." method="onComponentsTree_itemSelected"]
[connection signal="confirmed" from="NewComponentDialog" to="." method="onNewComponentDialog_confirmed"]
